--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
           <a class="list-group-item" href="#">
             <h4 class="list-group-item-heading">
               <%= user.first_name; %>&nbsp;<%= user.last_name; %>
-              <button class="deleteUser btn btn-primary btn-xs" data-id="<%= user._id %>">Delete</button>
+              <button class="deleteUser btn btn-danger btn-xs" data-id="<%= user._id %>">Delete</button>
             </h4>
             <p class="list-group-item-text">
               <%= user.email; %>
